Implement create and list of posts
