# backend/routes/endpoints/post_routes.py
@@ -1,40 +1,21 @@
 import os
 import yaml
-from fastapi import FastAPI, Form, HTTPException
-from backend.init_db import init_db
+from fastapi import APIRouter, Form, HTTPException
 from backend.routes.crud.post_crud import get_all_posts, get_posts_by_user_id, get_post_by_id, get_posts_by_query, create_post, update_post, delete_post
 from backend.models.post import Post as PostModel
 from typing import List, Optional
 
 
-app = FastAPI(
-    title="Simple Social Media API",
-    description="This is an API for a small project called 'Simple Social Media', which is being developed as part of the 'Software Engineering' course.",
-    version="0.1",)
-
-
-
-@app.on_event("startup")
-def on_startup():
-    init_db()
-
-    openapi_schema = app.openapi()  # export open api-spec as python-dict
-    folder_path = "./backend/routes/doc/"
-    os.makedirs(folder_path, exist_ok=True)
-    yaml_file_path = os.path.join(folder_path, "openapi_post_spec.yaml")
-
-    with open(yaml_file_path, "w") as file:
-        yaml.dump(openapi_schema, file, default_flow_style=False)  # save api spec as YAML
-    print("OpenAPI-spec for POST written to {} successfully".format(yaml_file_path))
+post_router = APIRouter(prefix="/posts", tags=["Posts"])
 
 # get all posts
-@app.get("/posts/", response_model=List[PostModel], tags=["Posts"])
+@post_router.get("", response_model=List[PostModel], tags=["Posts"])
 def posts_list():
     return get_all_posts()
 
 # get posts by query (title or comment)
 # /posts/search?query=...
-@app.get("/posts/search", response_model=List[PostModel], tags=["Posts"])
+@post_router.get("/search", response_model=List[PostModel], tags=["Posts"])
 def posts_by_query(query: str):
     post = get_posts_by_query(query)
     if not post:
@@ -43,7 +24,7 @@ def posts_by_query(query: str):
 
 
 # get post by id
-@app.get("/posts/{post_id}", response_model=PostModel, tags=["Posts"])
+@post_router.get("/{post_id}", response_model=PostModel, tags=["Posts"])
 def post_by_id(post_id: int):
     post = get_post_by_id(post_id)
     if not post:
@@ -52,7 +33,7 @@ def post_by_id(post_id: int):
 
 
 # get all posts by user
-@app.get("/users/{user_id}/posts", response_model=List[PostModel], tags=["Posts"])
+@post_router.get("/users/{user_id}", response_model=List[PostModel], tags=["Posts"])
 def posts_by_user_id(user_id: int):
     post = get_posts_by_user_id(user_id)
     if not post:
@@ -62,7 +43,7 @@ def posts_by_user_id(user_id: int):
 
 
 # create post
-@app.post("/posts/", response_model=PostModel, tags=["Posts"])
+@post_router.post("", response_model=PostModel, tags=["Posts"])
 async def create_post_api(
         user_id: int = Form(...),
         title: str = Form(...),
@@ -74,7 +55,7 @@ async def create_post_api(
 
 
 # update post
-@app.put("/posts/{post_id}", response_model=PostModel, tags=["Posts"])
+@post_router.put("/{post_id}", response_model=PostModel, tags=["Posts"])
 async def update_post_api(
         post_id: int,
         title: Optional[str] = Form(None),
@@ -93,7 +74,7 @@ async def update_post_api(
 
 
 # delete post by post_id
-@app.delete("/posts/{post_id}", tags=["Posts"])
+@post_router.delete("/{post_id}", tags=["Posts"])
 def delete_post_by_id(post_id: int):
     success = delete_post(post_id)
     if not success:
